# notify_secretary_bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: main.py  notify_bot.py
