[tool.poetry]
name = "notice-secretary-bot"
version = "0.1.0"
description = ""
authors = ["mo-ri-regen"]
readme = "README.md"
packages = [{include = "notice_secretary_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
